--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,36 @@
 
 <body>
     <header class="header">
-
+        <div class="header__logo">
+            <img class="header__logo-img" src="icons/LogoNoBorder.png" alt="sova_logo">
+            <div class="header__logo-text">СОВА</div>
+        </div>
+        <div class="header__items">
+            <div class="header__items-item">
+                <a href="index.html">Главная</a>
+            </div>
+            <div class="header__items-item">
+                <a href="index.html">Меню</a>
+            </div>
+            <div class="header__items-item">
+                <a href="index.html">Напитки</a>
+            </div>
+            <div class="header__items-item">
+                <a href="index.html">Доставка</a>
+            </div>
+            <div class="header__items-item">
+                <a href="index.html">О нас</a>
+            </div>
+            <div class="header__items-item">
+                <a href="index.html">Контакты</a>
+            </div>
+        </div>
     </header>
     <div class="promo">
-        <div class="promo__background">
-            <img src="img/interier/main1.jpg" alt="">
-        </div>
-        <div class="promo__background">
-            <img src="img/interier/main2.jpg" alt="">
-        </div>
+        <div class="icon-scroll"></div>
+    </div>
+    <div class="about">
+        
     </div>
 
 
