--- a/src/index.html
+++ b/src/index.html
@@ -72,12 +72,17 @@
                 <a href="index.html">Контакты</a>
             </div>
         </div>
+        <div class="header__hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <div class="promo">
         <div class="icon-scroll"></div>
     </div>
     <div class="about">
-        
+        <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
     </div>
 
 
