--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,10 @@
     </header>
     <div class="promo">
         <div class="icon-scroll"></div>
+        <div class="promo__goodMorning">Доброе утро!<br> Мы будем рады накормить вас вкусными и полезными завтраками!
+        </div>
     </div>
-    <div class="about">
+    <div class="description">
         <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
     </div>
 
