--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,9 @@
     </header>
     <div class="promo">
         <div class="icon-scroll"></div>
-        <div class="promo__goodMorning">Доброе утро!<br> Мы будем рады накормить вас вкусными и полезными завтраками!
+        <div class="promo__goodMorning">
+            <span class="promo__goodMorning-hello">Доброе утро!</span><br>
+            <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!</span>
         </div>
     </div>
     <div class="description">
