--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,28 @@
         </div>
     </div>
     <div class="description">
-        <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
+        <div class="container">
+            <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
+            <div class="description__line"></div>
+            <div class="description__wrapper">
+                <div class="description__img">
+                    <img src="img/description/waiter.jpg" alt="sova_barista">
+                </div>
+                <div class="description__img">
+                    <img src="img/food/2.jpg" alt="sova_donnuts">
+                </div>
+            </div>
+            <div class="description__about">
+                <div class="description__about-title">О нас</div>
+                <div class="description__about-text">
+                    Кофейня СОВА - это пространство, которое объединяет разных интересных людей.<br>
+
+                    Место, где пахнет свежим кофе и целый день подают завтраки!<br>
+
+                    Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
+                </div>
+            </div>
+        </div>
     </div>
 
 
