--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!</span>
         </div>
     </div>
-    <div class="description">
+    <!-- <div class="description">
         <div class="container">
             <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
             <div class="description__line"></div>
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <script src="js/script.js"></script>
