--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,26 @@
             <span></span>
         </div>
     </header>
+    <div class="header__items__mobile">
+        <div class="header__items__mobile-item">
+            <a href="index.html">Главная</a>
+        </div>
+        <div class="header__items__mobile-item">
+            <a href="index.html">Меню</a>
+        </div>
+        <div class="header__items__mobile-item">
+            <a href="index.html">Напитки</a>
+        </div>
+        <div class="header__items__mobile-item">
+            <a href="index.html">Доставка</a>
+        </div>
+        <div class="header__items__mobile-item">
+            <a href="index.html">О нас</a>
+        </div>
+        <div class="header__items__mobile-item">
+            <a href="index.html">Контакты</a>
+        </div>
+    </div>
     <div class="promo">
         <div class="icon-scroll"></div>
         <div class="promo__goodMorning">
