--- a/src/index.html
+++ b/src/index.html
@@ -47,14 +47,14 @@
 </head>
 
 <body>
-    <header class="header">
+    <section class="header">
         <div class="header__logo">
             <img class="header__logo-img" src="icons/LogoNoBorder.png" alt="sova_logo">
             <div class="header__logo-text">СОВА</div>
         </div>
         <div class="header__items">
-            <div class="header__items-item">
-                <a href="index.html">Главная</a>
+            <div class="header__items-item ">
+                <a class="header_active" href="index.html">Главная</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Меню</a>
@@ -77,10 +77,10 @@
             <span></span>
             <span></span>
         </div>
-    </header>
+    </section>
     <div class="header__items__mobile">
         <div class="header__items__mobile-item">
-            <a href="index.html">Главная</a>
+            <a class="header_active" href="index.html">Главная</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Меню</a>
@@ -98,16 +98,16 @@
             <a href="index.html">Контакты</a>
         </div>
     </div>
-    <div class="promo">
+    <section class="promo">
         <div class="icon-scroll"></div>
         <div class="promo__goodMorning">
             <span class="promo__goodMorning-hello">Доброе утро!</span><br>
             <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!</span>
         </div>
-    </div>
-    <!-- <div class="description">
+    </section>
+    <section class="description">
         <div class="container">
-            <h2>Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
+            <h2 class="description__title">Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
             <div class="description__line"></div>
             <div class="description__wrapper">
                 <div class="description__img">
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </section>
 
 
     <script src="js/script.js"></script>
