--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,13 @@
         <div class="icon-scroll"></div>
         <div class="promo__goodMorning">
             <span class="promo__goodMorning-hello">Доброе утро!</span><br>
-            <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!</span>
+            <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!<br><br>
+            </span>
+            <ul class="promo__goodMorning-list">
+                <li>Без глютена</li>
+                <li>Без лактозы</li>
+                <li>С низким содержанием сахара</li>
+            </ul>
         </div>
     </section>
     <section class="description">
