--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
                     <img src="img/food/2.jpg" alt="sova_donnuts">
                 </div>
             </div>
-            <div class="description__about">
+            <div class="description__about rellax" data-rellax-speed="4">
                 <div class="description__about-title">О нас</div>
                 <div class="description__about-text">
                     Кофейня СОВА - это пространство, которое объединяет разных интересных людей.<br>
@@ -136,7 +136,28 @@
         </div>
     </section>
 
+    <section class="novelty">
+        <div class="novelty__pre"></div>
+        <div class="novelty__post">
+            <div class="container">
+                <h2 class="novelty__title">Попробуйте наши новинки</h2>
+                <div class="novelty__line"></div>
+                <div class="novelty__wrapper">
+                    <img class="novelty__img" src="img/novelty/soup.jpg" alt="novelty_soup">
+                    <img class="novelty__img" src="img/novelty/medovik.jpg" alt="novelty_cake">
+                </div>
+            </div>
+        </div>
+        <div class="novelty__menu">
+            <div class="novelty__menu-title">Новинки</div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
+                <div class="novelty__menu-item-price">9.00</div>
+            </div>
+        </div>
+    </section>
 
+    <script src="js/rellax.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
