--- a/src/index.html
+++ b/src/index.html
@@ -148,8 +148,8 @@
                 </div>
             </div>
         </div>
-        <div class="novelty__menu">
-            <div class="novelty__menu-title">Новинки</div>
+        <div class="novelty__menu rellax" data-rellax-speed="4">
+            <div class="novelty__menu-title">Наши новинки</div>
             <div class="novelty__menu-item">
                 <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
                 <div class="novelty__menu-item-price">9.00</div>
