--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,13 @@
     </div>
     <section class="promo">
         <div class="icon-scroll"></div>
+        <div class="promo__icons">
+            <img class="promo__icon " src="icons/gluten-free.png" alt="gluten-free">
+            <img class="promo__icon "  src="icons/no-sugar.png" alt="no-sugar">
+            <img class="promo__icon " data-wow-delay="3s" data-wow-duration="2s" src="icons/vegan.png" alt="vegan">
+        </div>
         <div class="promo__goodMorning">
-            <span class="promo__goodMorning-hello">Доброе утро!</span><br>
+            <span class="promo__goodMorning-hello wow animate__slideInLeft" data-wow-delay="2.5s" data-wow-duration="2s">Доброе утро!</span><br>
             <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!<br><br>
             </span>
             <ul class="promo__goodMorning-list">
@@ -150,13 +155,42 @@
         </div>
         <div class="novelty__menu rellax" data-rellax-speed="4">
             <div class="novelty__menu-title">Наши новинки</div>
+            <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей</div>
+                <div class="novelty__menu-item-price">10.00</div>
+            </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Галета с тунцом, страчетеллой и цукини</div>
+                <div class="novelty__menu-item-price">10.00</div>
+            </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Крем-суп из чечевицы</div>
+                <div class="novelty__menu-item-price">8.50</div>
+            </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Кето-завтрак со спаржей и беконом</div>
+                <div class="novelty__menu-item-price">14.00</div>
+            </div>
             <div class="novelty__menu-item">
                 <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
                 <div class="novelty__menu-item-price">9.00</div>
             </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Галета ягодная с рикоттой и миндалем</div>
+                <div class="novelty__menu-item-price">10.00</div>
+            </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Галета груша-дор блю</div>
+                <div class="novelty__menu-item-price">9.50</div>
+            </div>
+            <div class="novelty__menu-item">
+                <div class="novelty__menu-item-title">Безглютеновый медовик с малиной</div>
+                <div class="novelty__menu-item-price">4.50</div>
+            </div>
         </div>
     </section>
-
+    <script src="js/wow.min.js"></script>
     <script src="js/rellax.min.js"></script>
     <script src="js/script.js"></script>
 </body>
