--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                     Место, где пахнет свежим кофе и целый день подают завтраки!<br>
 
                     Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
-                </div>
+                    Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара), без глютена и лактозы.
             </div>
         </div>
     </section>
@@ -152,42 +152,50 @@
                     <img class="novelty__img" src="img/novelty/medovik.jpg" alt="novelty_cake">
                 </div>
             </div>
+            <div class="novelty__menu rellax" data-rellax-speed="4">
+                <div class="novelty__menu-title">Наши новинки</div>
+                <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей</div>
+                    <div class="novelty__menu-item-price">10.00</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Галета с тунцом, страчетеллой и цукини</div>
+                    <div class="novelty__menu-item-price">10.00</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Крем-суп из чечевицы</div>
+                    <div class="novelty__menu-item-price">8.50</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Кето-завтрак со спаржей и беконом</div>
+                    <div class="novelty__menu-item-price">14.00</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
+                    <div class="novelty__menu-item-price">9.00</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Галета ягодная с рикоттой и миндалем</div>
+                    <div class="novelty__menu-item-price">10.00</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Галета груша-дор блю</div>
+                    <div class="novelty__menu-item-price">9.50</div>
+                </div>
+                <div class="novelty__menu-item">
+                    <div class="novelty__menu-item-title">Безглютеновый медовик с малиной</div>
+                    <div class="novelty__menu-item-price">4.50</div>
+                </div>
+            </div>
         </div>
-        <div class="novelty__menu rellax" data-rellax-speed="4">
-            <div class="novelty__menu-title">Наши новинки</div>
-            <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей</div>
-                <div class="novelty__menu-item-price">10.00</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Галета с тунцом, страчетеллой и цукини</div>
-                <div class="novelty__menu-item-price">10.00</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Крем-суп из чечевицы</div>
-                <div class="novelty__menu-item-price">8.50</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Кето-завтрак со спаржей и беконом</div>
-                <div class="novelty__menu-item-price">14.00</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
-                <div class="novelty__menu-item-price">9.00</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Галета ягодная с рикоттой и миндалем</div>
-                <div class="novelty__menu-item-price">10.00</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Галета груша-дор блю</div>
-                <div class="novelty__menu-item-price">9.50</div>
-            </div>
-            <div class="novelty__menu-item">
-                <div class="novelty__menu-item-title">Безглютеновый медовик с малиной</div>
-                <div class="novelty__menu-item-price">4.50</div>
-            </div>
+        
+    </section>
+    <section class="promotion">
+        <div class="promotion__pre"></div>
+        <div class="promotion__post">
+
+
         </div>
     </section>
     <script src="js/wow.min.js"></script>
