--- a/src/index.html
+++ b/src/index.html
@@ -102,11 +102,12 @@
         <div class="icon-scroll"></div>
         <div class="promo__icons">
             <img class="promo__icon " src="icons/gluten-free.png" alt="gluten-free">
-            <img class="promo__icon "  src="icons/no-sugar.png" alt="no-sugar">
+            <img class="promo__icon " src="icons/no-sugar.png" alt="no-sugar">
             <img class="promo__icon " data-wow-delay="3s" data-wow-duration="2s" src="icons/vegan.png" alt="vegan">
         </div>
         <div class="promo__goodMorning">
-            <span class="promo__goodMorning-hello wow animate__slideInLeft" data-wow-delay="2.5s" data-wow-duration="2s">Доброе утро!</span><br>
+            <span class="promo__goodMorning-hello wow animate__slideInLeft" data-wow-delay="2.5s"
+                data-wow-duration="2s">Доброе утро!</span><br>
             <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!<br><br>
             </span>
             <ul class="promo__goodMorning-list">
@@ -136,9 +137,10 @@
                     Место, где пахнет свежим кофе и целый день подают завтраки!<br>
 
                     Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
-                    Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара), без глютена и лактозы.
+                    Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара),
+                    без глютена и лактозы.
+                </div>
             </div>
-        </div>
     </section>
 
     <section class="novelty">
@@ -156,7 +158,8 @@
                 <div class="novelty__menu-title">Наши новинки</div>
                 <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
                 <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей</div>
+                    <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей
+                    </div>
                     <div class="novelty__menu-item-price">10.00</div>
                 </div>
                 <div class="novelty__menu-item">
@@ -189,13 +192,82 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <section class="promotion">
         <div class="promotion__pre"></div>
         <div class="promotion__post">
+            <div class="container">
+                <div class="promotion__title">Скидки и акции!</div>
+                <div class="promotion__line"></div>
+                <div class="promotion__items">
+                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
+                        <div class="promotion__item-wrapper">
+                            <div class="promotion__item-title">Блюда на вынос</div>
+                            <div class="promotion__item-descr">со скидкой 10% от 15 рублей в чеке</div>
+                        </div>
+                        <div class="promotion__item-logo">
+                            <img src="icons/10off.png" alt="10%off">
+                        </div>
+                    </div>
+                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
+                        <div class="promotion__item-wrapper">
+                            <div class="promotion__item-title">Ланч</div>
+                            <div class="promotion__item-descr">со скидкой 10% на всё меню с 15:00 до 17:00</div>
+                        </div>
+                        <div class="promotion__item-logo">
+                            <img src="icons/10off.png" alt="10%off">
+                        </div>
+                    </div>
+                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
+                        <div class="promotion__item-wrapper">
+                            <div class="promotion__item-title">Кофе к завтраку</div>
+                            <div class="promotion__item-descr">бесплатно с 9:00 до 12:00</div>
+                        </div>
+                        <div class="promotion__item-logo">
+                            <img src="icons/free-icon.png" alt="free">
+                        </div>
+                    </div>
+                </div>
+                <div class="promotion__explanation">Скидки не суммируются и действуют только по будням!</div>
+            </div>
+            <div class="promotion__footer">
+                <div class="promotion__footer-logo">
+                    <div class="promotion__footer-logo-title">СОВА</div>
+                    <div class="promotion__footer-logo-subtitle">#КОФЕ #ЕДА #ЭМОЦИИ</div>
+                </div>
+                <div class="promotion__footer-contacts">
+                    <div class="promotion__footer-contacts-item">
+                        <div class="promotion__footer-contacts-item-img">
+                            <img src="" alt="">
+                        </div>
+                        <address class="promotion__footer-contacts-item-descr">
+                            Беларусь, Могилёв, улица Ленинская 38
+                        </address>
+                    </div>
+                    <div class="promotion__footer-contacts-item">
+                        <div class="promotion__footer-contacts-item-img">
+                            <img src="" alt="">
+                        </div>
+                        <address class="promotion__footer-contacts-item-descr">
+                            <a href="tel:375299140088">+375 (29) 914-00-88</a>
+                        </address>
+                    </div>
+
+                    <a class="promotion__footer-contacts-item" href="https://www.instagram.com/sovacoffee.home">
+                        <div class="promotion__footer-contacts-item-img">
+                            <img src="" alt="">
+                        </div>
+                        <address class="promotion__footer-contacts-item-descr">
+                            sovacoffee.home
+                        </address>
+                    </a>
 
 
+
+
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/wow.min.js"></script>
