--- a/src/menu.html
+++ b/src/menu.html
@@ -54,10 +54,10 @@
         </div>
         <div class="header__items">
             <div class="header__items-item ">
-                <a class="header_active" href="index.html">Главная</a>
+                <a href="index.html">Главная</a>
             </div>
             <div class="header__items-item">
-                <a href="menu.html">Меню</a>
+                <a class="header_active" href="menu.html">Меню</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Напитки</a>
@@ -80,10 +80,10 @@
     </section>
     <div class="header__items__mobile">
         <div class="header__items__mobile-item">
-            <a class="header_active" href="index.html">Главная</a>
+            <a href="index.html">Главная</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="menu.html">Меню</a>
+            <a class="header_active" href="menu.html">Меню</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Напитки</a>
@@ -98,142 +98,28 @@
             <a href="index.html">Контакты</a>
         </div>
     </div>
-    <section class="promo">
-        <div class="icon-scroll"></div>
-        <div class="promo__icons">
-            <img class="promo__icon " src="icons/gluten-free.png" alt="gluten-free">
-            <img class="promo__icon " src="icons/no-sugar.png" alt="no-sugar">
-            <img class="promo__icon " data-wow-delay="3s" data-wow-duration="2s" src="icons/vegan.png" alt="vegan">
-        </div>
-        <div class="promo__goodMorning">
-            <span class="promo__goodMorning-hello wow animate__slideInLeft" data-wow-delay="2.5s"
-                data-wow-duration="2s">Доброе утро!</span><br>
-            <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!<br><br>
-            </span>
-            <ul class="promo__goodMorning-list">
-                <li>Без глютена</li>
-                <li>Без лактозы</li>
-                <li>С низким содержанием сахара</li>
-            </ul>
-        </div>
-    </section>
-    <section class="description">
+    <section class="menu">
+        <div class="menu__title">Меню</div>
+        <div class="menu__greenLine"></div>
         <div class="container">
-            <h2 class="description__title">Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
-            <div class="description__line"></div>
-            <div class="description__wrapper">
-                <div class="description__img">
-                    <img src="img/description/waiter.jpg" alt="sova_barista">
-                </div>
-                <div class="description__img">
-                    <img src="img/food/2.jpg" alt="sova_donnuts">
-                </div>
-            </div>
-            <div class="description__about rellax" data-rellax-speed="4">
-                <div class="description__about-title">О нас</div>
-                <div class="description__about-text">
-                    Кофейня СОВА - это пространство, которое объединяет разных интересных людей.<br>
-
-                    Место, где пахнет свежим кофе и целый день подают завтраки!<br>
-
-                    Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
-                    Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара),
-                    без глютена и лактозы.
-                </div>
-            </div>
-    </section>
-
-    <section class="novelty">
-        <div class="novelty__pre"></div>
-        <div class="novelty__post">
-            <div class="container">
-                <h2 class="novelty__title">Попробуйте наши новинки</h2>
-                <div class="novelty__line"></div>
-                <div class="novelty__wrapper">
-                    <img class="novelty__img" src="img/novelty/soup.jpg" alt="novelty_soup">
-                    <img class="novelty__img" src="img/novelty/medovik.jpg" alt="novelty_cake">
-                </div>
-            </div>
-            <div class="novelty__menu rellax" data-rellax-speed="4">
-                <div class="novelty__menu-title">Наши новинки</div>
-                <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей
+            <div class="menu__container">
+                <div class="menu__container-title">Завтраки весь день</div>
+                <div class="menu__items-1">
+                    <div class="menu__item">
+                        <div class="menu__item-price">
+                            16.50
+                        </div>
+                        <div class="menu__item-descr">
+                            Яйца Беннедикт на сырной вафле с лососем и голландским соусом/390г
+                        </div>
                     </div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета с тунцом, страчетеллой и цукини</div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Крем-суп из чечевицы</div>
-                    <div class="novelty__menu-item-price">8.50</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Кето-завтрак со спаржей и беконом</div>
-                    <div class="novelty__menu-item-price">14.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
-                    <div class="novelty__menu-item-price">9.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета ягодная с рикоттой и миндалем</div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета груша-дор блю</div>
-                    <div class="novelty__menu-item-price">9.50</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Безглютеновый медовик с малиной</div>
-                    <div class="novelty__menu-item-price">4.50</div>
                 </div>
             </div>
         </div>
 
     </section>
-    <section class="promotion">
-        <div class="promotion__pre"></div>
-        <div class="promotion__post">
-            <div class="container">
-                <div class="promotion__title">Скидки и акции!</div>
-                <div class="promotion__line"></div>
-                <div class="promotion__items">
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Блюда на вынос</div>
-                            <div class="promotion__item-descr">со скидкой 10% от 15 рублей в чеке</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/10off.png" alt="10%off">
-                        </div>
-                    </div>
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Ланч</div>
-                            <div class="promotion__item-descr">со скидкой 10% на всё меню с 15:00 до 17:00</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/10off.png" alt="10%off">
-                        </div>
-                    </div>
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Кофе к завтраку</div>
-                            <div class="promotion__item-descr">бесплатно с 9:00 до 12:00</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/free-icon.png" alt="free">
-                        </div>
-                    </div>
-                </div>
-                <div class="promotion__explanation">Скидки не суммируются и действуют только по будням!</div>
-            </div>
-           
-        </div>
-    </section>
+
+
 
     <footer class="footer">
         <div class="footer-logo">
