--- a/src/menu.html
+++ b/src/menu.html
@@ -99,19 +99,21 @@
         </div>
     </div>
     <section class="menu">
-        <div class="menu__title">Меню</div>
-        <div class="menu__greenLine"></div>
         <div class="container">
+            <div class="menu__title">Меню</div>
+            <div class="menu__greenLine"></div>
             <div class="menu__container">
                 <div class="menu__container-title">Завтраки весь день</div>
                 <div class="menu__items-1">
                     <div class="menu__item">
-                        <div class="menu__item-price">
-                            16.50
-                        </div>
-                        <div class="menu__item-descr">
-                            Яйца Беннедикт на сырной вафле с лососем и голландским соусом/390г
-                        </div>
+                        <div class="menu__item-price"> 16.50</div>
+                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом / 390г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 14.50</div>
+                        <div class="menu__item-descr">Вафли из цукини с лососем и глазуньей / 300г</div>
+                        <div class="menu__item-new"></div>
                     </div>
                 </div>
             </div>
