--- a/src/menu.html
+++ b/src/menu.html
@@ -104,15 +104,187 @@
             <div class="menu__greenLine"></div>
             <div class="menu__container">
                 <div class="menu__container-title">Завтраки весь день</div>
-                <div class="menu__items-1">
+                <div class="menu__items">
                     <div class="menu__item">
                         <div class="menu__item-price"> 16.50</div>
-                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом / 390г</div>
+                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом /
+                            390г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 14.50</div>
                         <div class="menu__item-descr">Вафли из цукини с лососем и глазуньей / 300г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-descr">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей / 270г
+                        </div>
+                        <div class="menu__item-new"> <img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-descr">Шпинатные панкейки с курицей, грибами и сыром / 370г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 13.50</div>
+                        <div class="menu__item-descr">Скрэмбл с лососем и вялеными томатами / 380г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 13.50</div>
+                        <div class="menu__item-descr">Большая брускетта из хлеба на закваске с яйцом пашот, лососем и
+                            авокадо / 315г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-descr">Шакшуша с фасолью / 400г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item-post">
+                        <div class="menu__item-post-price"> +5.50</div>
+                        <div class="menu__item-post-descr">лосось/40г +4.00 бекон/40г +4.00 курица/90г</div>
+                        <div class="menu__item-post-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 12.50</div>
+                        <div class="menu__item-descr">Закрытый омлет с беконом, грибами и сыром / 350г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-descr">Салат с курицей, цукини и опятами / 350г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-descr">Салат с фетой, сладким перцем, томатами и тыквенными семечками /
+                            450г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 16.00</div>
+                        <div class="menu__item-descr">Салат со свежим тунцом, черри, рукколой и домашним майонезом /
+                            350г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 11.00</div>
+                        <div class="menu__item-descr">Боул с гречневой лапшой, курицей и грибами / 320г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 15.00</div>
+                        <div class="menu__item-descr">Боул с рисовой лапшой, тунцом (курицей) и спаржей / 380г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-descr">Ролл с запеченой курицей и домашним соусом на сырном лаваше / 450г
+                        </div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-descr">Авокадо тост с хумусом и опятами / 320г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 14.50</div>
+                        <div class="menu__item-descr">Сэндвич с лососем, зеленью и крем-чизом / 200г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-descr">Сэндвич с тунцом зеленью / 370г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 19.00</div>
+                        <div class="menu__item-descr"><span>/10.00</span> Пинса с беконом, грибами и сыром чеддер /700г
+                            / 350г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 24.00</div>
+                        <div class="menu__item-descr"><span>/13.00</span> Пинса с лососем, страчетеллой и рукколой /700г
+                            / 350г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-descr">Галета с тунцом, страчетеллой и цукини / 265г</div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-descr">Крем-суп из чечевицы / 425г</div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-descr">Безглютеновые блинчики с сыром, курицей и грибным соусом / 390г
+                        </div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 12.50</div>
+                        <div class="menu__item-descr">Безглютеновый хачапури с овощным салатом / 415г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 14.00</div>
+                        <div class="menu__item-descr">Кето-завтрак со спаржей и беконом / 350г</div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>                  
+                </div>
+
+                <div class="menu__items">
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и мёдом /
+                            300г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 8.00</div>
+                        <div class="menu__item-descr">Воздуные сырники с топингом и сметаной / 230г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item-post">
+                        <div class="menu__item-post-price"></div>
+                        <div class="menu__item-post-descr">черника, клубника, груша, малина, вишня</div>
+                        <div class="menu__item-post-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-descr">Сырники с шоколадным кремом /
+                            320г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 9.00</div>
+                        <div class="menu__item-descr">Сырники с кокосовой карамелью и медовой крошкой /
+                            290г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 7.00</div>
+                        <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом /
+                            360г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item-post">
+                        <div class="menu__item-post-price"></div>
+                        <div class="menu__item-post-descr">топинг на выбор</div>
+                        <div class="menu__item-post-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-descr">Блинчики на рисовой и амара /
+                            320г</div>
                         <div class="menu__item-new"></div>
                     </div>
                 </div>
@@ -132,9 +304,9 @@
             <div class="footer-contacts-item">
                 <div class="footer-contacts-item-img">
                     <svg width="20px" height="20px" viewBox="0 0 24 24"
-                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                        xmlns="http://www.w3.org/2000/svg" version="1.1"
-                        xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"
+                        version="1.1" xmlns:cc="http://creativecommons.org/ns#"
+                        xmlns:dc="http://purl.org/dc/elements/1.1/">
                         <g transform="translate(0 -1028.4)">
                             <path
                                 d="m12 0c-4.4183 2.3685e-15 -8 3.5817-8 8 0 1.421 0.3816 2.75 1.0312 3.906 0.1079 0.192 0.221 0.381 0.3438 0.563l6.625 11.531 6.625-11.531c0.102-0.151 0.19-0.311 0.281-0.469l0.063-0.094c0.649-1.156 1.031-2.485 1.031-3.906 0-4.4183-3.582-8-8-8zm0 4c2.209 0 4 1.7909 4 4 0 2.209-1.791 4-4 4-2.2091 0-4-1.791-4-4 0-2.2091 1.7909-4 4-4z"
@@ -151,7 +323,14 @@
             </div>
             <div class="footer-contacts-item">
                 <div class="footer-contacts-item-img">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 122.88 122.88" enable-background="new 0 0 122.88 122.88" xml:space="preserve"><g><path fill="#f0ffff" fill-rule="evenodd" clip-rule="evenodd" d="M13.001,0h96.878c7.152,0,13.001,5.849,13.001,13.001v96.878 c0,7.152-5.849,13.001-13.001,13.001H13.001C5.849,122.88,0,117.031,0,109.879V13.001C0,5.849,5.849,0,13.001,0L13.001,0z M21.196,33.195c6.529,4.49,13.026,9,18.496,14.824c-3.148,13.872,9.386,24.945,20.829,31.483c4.461,2.551,6.432,4.35,11.411,3.48 l19.623,19.215C54.648,114.594,13.23,62.588,21.196,33.195L21.196,33.195z M76.99,78.052l4.304-4.382 c1.254-1.261,3.304-1.271,4.558-0.048l15.856,15.627c1.264,1.248,1.279,3.291,0.043,4.557l-4.311,4.369 c-1.234,1.271-3.279,1.271-4.55,0.051L77.028,82.599C75.766,81.354,75.749,79.306,76.99,78.052L76.99,78.052z M25.047,24.009 l3.129-3.787c1.333-1.628,3.771-1.871,5.386-0.533l16.232,13.378c1.631,1.34,1.869,3.775,0.533,5.397l-3.125,3.789 c-1.335,1.615-3.764,1.851-5.395,0.52L25.562,29.39C23.945,28.057,23.711,25.619,25.047,24.009L25.047,24.009z"/></g></svg>
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px"
+                        viewBox="0 0 122.88 122.88" enable-background="new 0 0 122.88 122.88" xml:space="preserve">
+                        <g>
+                            <path fill="#f0ffff" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M13.001,0h96.878c7.152,0,13.001,5.849,13.001,13.001v96.878 c0,7.152-5.849,13.001-13.001,13.001H13.001C5.849,122.88,0,117.031,0,109.879V13.001C0,5.849,5.849,0,13.001,0L13.001,0z M21.196,33.195c6.529,4.49,13.026,9,18.496,14.824c-3.148,13.872,9.386,24.945,20.829,31.483c4.461,2.551,6.432,4.35,11.411,3.48 l19.623,19.215C54.648,114.594,13.23,62.588,21.196,33.195L21.196,33.195z M76.99,78.052l4.304-4.382 c1.254-1.261,3.304-1.271,4.558-0.048l15.856,15.627c1.264,1.248,1.279,3.291,0.043,4.557l-4.311,4.369 c-1.234,1.271-3.279,1.271-4.55,0.051L77.028,82.599C75.766,81.354,75.749,79.306,76.99,78.052L76.99,78.052z M25.047,24.009 l3.129-3.787c1.333-1.628,3.771-1.871,5.386-0.533l16.232,13.378c1.631,1.34,1.869,3.775,0.533,5.397l-3.125,3.789 c-1.335,1.615-3.764,1.851-5.395,0.52L25.562,29.39C23.945,28.057,23.711,25.619,25.047,24.009L25.047,24.009z" />
+                        </g>
+                    </svg>
                 </div>
                 <address class="footer-contacts-item-descr">
                     <a href="tel:375299140088">+375 (29) 914-00-88</a>
@@ -177,7 +356,7 @@
         </div>
         <div class="footer__powered">
             <a href="https://createmax.site/" target=”_blank”>Powered by <img src="icons/createmax192x192.png"
-                alt="createmax"></a>
+                    alt="createmax"></a>
         </div>
     </footer>
     <script src="js/wow.min.js"></script>
