--- a/src/menu.html
+++ b/src/menu.html
@@ -106,13 +106,12 @@
                 <div class="menu__container-title">Завтраки весь день</div>
                 <div class="menu__items">
                     <div class="menu__item">
-                        <div class="menu__item-price"> 16.50</div>
-                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом /
-                            390г</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 16.50</div>
+                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом / 390г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 14.50</div>
+                        <div class="menu__item-price glutenFree"> 14.50</div>
                         <div class="menu__item-descr">Вафли из цукини с лососем и глазуньей / 300г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -120,7 +119,7 @@
                         <div class="menu__item-price"> 10.00</div>
                         <div class="menu__item-descr">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей / 270г
                         </div>
-                        <div class="menu__item-new"> <img src="icons/new-icon.png" alt="new"></div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 13.00</div>
@@ -244,8 +243,7 @@
                 <div class="menu__items">
                     <div class="menu__item">
                         <div class="menu__item-price"> 9.50</div>
-                        <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и мёдом /
-                            300г</div>
+                        <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и мёдом / 300г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
@@ -260,20 +258,17 @@
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 8.50</div>
-                        <div class="menu__item-descr">Сырники с шоколадным кремом /
-                            320г</div>
+                        <div class="menu__item-descr">Сырники с шоколадным кремом / 320г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 9.00</div>
-                        <div class="menu__item-descr">Сырники с кокосовой карамелью и медовой крошкой /
-                            290г</div>
+                        <div class="menu__item-descr">Сырники с кокосовой карамелью и медовой крошкой / 290г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 7.00</div>
-                        <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом /
-                            360г</div>
+                        <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом / 360г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item-post">
@@ -283,12 +278,71 @@
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price"> 10.00</div>
-                        <div class="menu__item-descr">Блинчики на рисовой и амара /
-                            320г</div>
+                        <div class="menu__item-descr">Блинчики на рисовой и амарантовой муке со взбитым крем-чизом / 285г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item-post">
+                        <div class="menu__item-post-price"></div>
+                        <div class="menu__item-post-descr">топинг на выбор</div>
+                        <div class="menu__item-post-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-descr">Галета ягодная с рикоттой и миндалем / 330г
+                            </div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-descr">Галета груша-дор блю / 365г</div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-descr">Чиа-пуддинг на растительном молоке с манговым пюре и гранолой / 250г</div>
                         <div class="menu__item-new"></div>
                     </div>
                 </div>
-            </div>
+                <div class="menu__items">
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-descr">Чизкейк / шоколад / груша-дор блю / ягодный / кокосовый / ореховый / маковый / 100г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-descr">Чизкейк Сан Себастьян с манговым пюре и гранолой / 100г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-descr">Кекс бананово-шоколадный / 1000г
+                        </div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-descr">Безглютеновый медовик с малиной / 140г</div>
+                        <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.00</div>
+                        <div class="menu__item-descr">Морковный рулет с крем-чизом и ягоднами / 100г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.00</div>
+                        <div class="menu__item-descr">Пирожное картошка / кокосовая / 75г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+                    <div class="menu__item">
+                        <div class="menu__item-price"> 4.00</div>
+                        <div class="menu__item-descr">Пончик / 136г</div>
+                        <div class="menu__item-new"></div>
+                    </div>
+            
+                </div>
+                <div class="menu__greyLine"></div>
         </div>
 
     </section>
