--- a/src/menu.html
+++ b/src/menu.html
@@ -111,34 +111,34 @@
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price glutenFree"> 14.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 14.50</div>
                         <div class="menu__item-descr">Вафли из цукини с лососем и глазуньей / 300г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
                         <div class="menu__item-descr">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей / 270г
                         </div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 13.00</div>
                         <div class="menu__item-descr">Шпинатные панкейки с курицей, грибами и сыром / 370г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 13.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 13.50</div>
                         <div class="menu__item-descr">Скрэмбл с лососем и вялеными томатами / 380г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 13.50</div>
+                        <div class="menu__item-price sugarFree"> 13.50</div>
                         <div class="menu__item-descr">Большая брускетта из хлеба на закваске с яйцом пашот, лососем и
                             авокадо / 315г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 8.50</div>
                         <div class="menu__item-descr">Шакшуша с фасолью / 400г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -148,29 +148,29 @@
                         <div class="menu__item-post-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 12.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 12.50</div>
                         <div class="menu__item-descr">Закрытый омлет с беконом, грибами и сыром / 350г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 13.00</div>
                         <div class="menu__item-descr">Салат с курицей, цукини и опятами / 350г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 12.00</div>
                         <div class="menu__item-descr">Салат с фетой, сладким перцем, томатами и тыквенными семечками /
                             450г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 16.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 16.00</div>
                         <div class="menu__item-descr">Салат со свежим тунцом, черри, рукколой и домашним майонезом /
                             350г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 11.00</div>
+                        <div class="menu__item-price  glutenFree sugarFree"> 11.00</div>
                         <div class="menu__item-descr">Боул с гречневой лапшой, курицей и грибами / 320г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -180,61 +180,61 @@
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-price sugarFree"> 9.50</div>
                         <div class="menu__item-descr">Ролл с запеченой курицей и домашним соусом на сырном лаваше / 450г
                         </div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 13.00</div>
+                        <div class="menu__item-price vegan"> 13.00</div>
                         <div class="menu__item-descr">Авокадо тост с хумусом и опятами / 320г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 14.50</div>
+                        <div class="menu__item-price sugarFree"> 14.50</div>
                         <div class="menu__item-descr">Сэндвич с лососем, зеленью и крем-чизом / 200г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-price sugarFree"> 12.00</div>
                         <div class="menu__item-descr">Сэндвич с тунцом зеленью / 370г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 19.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 19.00</div>
                         <div class="menu__item-descr"><span>/10.00</span> Пинса с беконом, грибами и сыром чеддер /700г
                             / 350г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 24.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 24.00</div>
                         <div class="menu__item-descr"><span>/13.00</span> Пинса с лососем, страчетеллой и рукколой /700г
                             / 350г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
                         <div class="menu__item-descr">Галета с тунцом, страчетеллой и цукини / 265г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-price vegan"> 8.50</div>
                         <div class="menu__item-descr">Крем-суп из чечевицы / 425г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 12.00</div>
+                        <div class="menu__item-price glutenFree"> 12.00</div>
                         <div class="menu__item-descr">Безглютеновые блинчики с сыром, курицей и грибным соусом / 390г
                         </div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 12.50</div>
+                        <div class="menu__item-price glutenFree"> 12.50</div>
                         <div class="menu__item-descr">Безглютеновый хачапури с овощным салатом / 415г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 14.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 14.00</div>
                         <div class="menu__item-descr">Кето-завтрак со спаржей и беконом / 350г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>                  
@@ -242,12 +242,12 @@
 
                 <div class="menu__items">
                     <div class="menu__item">
-                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 9.50</div>
                         <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и мёдом / 300г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 8.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 8.00</div>
                         <div class="menu__item-descr">Воздуные сырники с топингом и сметаной / 230г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -257,17 +257,17 @@
                         <div class="menu__item-post-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 8.50</div>
                         <div class="menu__item-descr">Сырники с шоколадным кремом / 320г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 9.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 9.00</div>
                         <div class="menu__item-descr">Сырники с кокосовой карамелью и медовой крошкой / 290г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 7.00</div>
+                        <div class="menu__item-price vegan sugarFree"> 7.00</div>
                         <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом / 360г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -277,7 +277,7 @@
                         <div class="menu__item-post-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
                         <div class="menu__item-descr">Блинчики на рисовой и амарантовой муке со взбитым крем-чизом / 285г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -287,25 +287,25 @@
                         <div class="menu__item-post-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 10.00</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
                         <div class="menu__item-descr">Галета ягодная с рикоттой и миндалем / 330г
                             </div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 9.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 9.50</div>
                         <div class="menu__item-descr">Галета груша-дор блю / 365г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 8.50</div>
+                        <div class="menu__item-price vegan sugarFree"> 8.50</div>
                         <div class="menu__item-descr">Чиа-пуддинг на растительном молоке с манговым пюре и гранолой / 250г</div>
                         <div class="menu__item-new"></div>
                     </div>
                 </div>
                 <div class="menu__items">
                     <div class="menu__item">
-                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-price glutenFree sugarFree"> 4.50</div>
                         <div class="menu__item-descr">Чизкейк / шоколад / груша-дор блю / ягодный / кокосовый / ореховый / маковый / 100г</div>
                         <div class="menu__item-new"></div>
                     </div>
@@ -321,7 +321,7 @@
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
-                        <div class="menu__item-price"> 4.50</div>
+                        <div class="menu__item-price glutenFree"> 4.50</div>
                         <div class="menu__item-descr">Безглютеновый медовик с малиной / 140г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
